--- a/mobile/src/main/res/layout/content_phone_config.xml
+++ b/mobile/src/main/res/layout/content_phone_config.xml
@@ -112,7 +112,8 @@
         android:text="RUN CONFIGURATION"
         android:id="@+id/button"
         android:layout_below="@+id/textView5"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:onClick="setStartTimeConfig" />
 
     <TextView
         android:layout_width="wrap_content"
