--- a/mobile/src/main/res/layout/content_phone_config.xml
+++ b/mobile/src/main/res/layout/content_phone_config.xml
@@ -15,15 +15,17 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Theater Time\nAutomation for Android Wear Theater mode"
+        android:text="Automation for Android Wear Theater mode"
         android:id="@+id/textView"
         android:textColor="@color/text_color"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_below="@+id/textView6"
+        android:layout_alignParentStart="true" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TURN ON"
+        android:text="TURN ON THEATER MODE"
         android:id="@+id/theaterOn"
         android:layout_below="@+id/textView"
         android:layout_alignParentStart="true"
@@ -32,50 +34,29 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TURN OFF"
+        android:text="TURN OFF THEATER MODE"
         android:id="@+id/theaterOff"
         android:layout_below="@+id/theaterOn"
         android:layout_alignParentStart="true"
         android:onClick="sendOff" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Set Theater Mode Start Time:"
-        android:id="@+id/textView2"
-        android:textColor="@color/text_color"
-        android:layout_below="@+id/theaterOff"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="14dp" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Set Start Time"
         android:id="@+id/setStartTime"
-        android:layout_below="@+id/textView2"
         android:layout_alignParentStart="true"
-        android:onClick="setStartingTime" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Set Theater Mode Stop Time"
-        android:id="@+id/textView3"
-        android:textColor="@color/text_color"
-        android:layout_below="@+id/setStartTime"
-        android:layout_alignParentStart="true" />
+        android:onClick="setStartingTime"
+        android:layout_below="@+id/textView7" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="SET STOP TIME"
         android:id="@+id/setStopTime"
-        android:layout_below="@+id/textView3"
-        android:layout_alignParentStart="true"
-        android:onClick="setEndingTime" />
+        android:onClick="setEndingTime"
+        android:layout_below="@+id/textView7"
+        android:layout_toEndOf="@+id/textView6" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -103,13 +84,13 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:id="@+id/stopTime"
         android:textColor="@color/text_color"
-        android:layout_alignBottom="@+id/textView5"
-        android:layout_toEndOf="@+id/theaterOff" />
+        android:layout_alignTop="@+id/textView5"
+        android:layout_toEndOf="@+id/button" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="RUN CONFIGURATION"
+        android:text="SAVE TIMER"
         android:id="@+id/button"
         android:layout_below="@+id/textView5"
         android:layout_alignParentStart="true"
@@ -120,7 +101,59 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:id="@+id/startTime"
-        android:layout_above="@+id/textView5"
         android:textColor="@color/text_color"
-        android:layout_alignStart="@+id/stopTime" />
+        android:layout_below="@+id/setStartTime"
+        android:layout_toEndOf="@+id/button" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Theater Time"
+        android:id="@+id/textView6"
+        android:textColor="#ffffff"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:textStyle="bold" />
+
+    <ProgressBar
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/progressBar"
+        android:progressTint="@color/colorPrimary"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/theaterOff"
+        android:layout_alignParentStart="true"
+        android:progress="100" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Auto Theater (sleep hours)"
+        android:id="@+id/textView7"
+        android:layout_below="@+id/progressBar"
+        android:layout_alignParentStart="true"
+        android:textColor="#ffffff" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Current timer:"
+        android:id="@+id/textView2"
+        android:layout_below="@+id/button"
+        android:layout_alignParentStart="true"
+        android:textColor="#ffffff" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:id="@+id/currentTimer"
+        android:layout_below="@+id/textView2"
+        android:layout_alignParentStart="true"
+        android:textColor="#ffffff" />
+
 </RelativeLayout>
