--- a/mobile/src/main/res/layout/content_phone_config.xml
+++ b/mobile/src/main/res/layout/content_phone_config.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -11,7 +12,12 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.chernowii.theatertime.PhoneConfig"
     tools:showIn="@layout/activity_phone_config">
-
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -155,5 +161,60 @@
         android:layout_below="@+id/textView2"
         android:layout_alignParentStart="true"
         android:textColor="#ffffff" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Intents"
+            android:layout_below="@+id/currentTimer"
+            android:layout_alignParentStart="true"
+            android:id="@+id/textView9"
+            android:textColor="#ffffff"
+            android:textStyle="bold" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="You can use these Intent URIs to turn Theater Mode ON or OFF.\nSet the Intent URIs to Broadcast Receiver! Works in Tasker/Llama. Use the buttons below to copy the URIs to Clipboard!:"
+            android:layout_below="@+id/textView9"
+            android:id="@+id/textView10"
+            android:layout_alignParentStart="true"
+            android:textColor="#ffffff"
+             />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="com.chernowii.theatertime.THEATER_ON"
+            android:layout_below="@+id/textView10"
+            android:id="@+id/textView11"
+            android:layout_alignParentStart="true"
+            android:textColor="#ffffff"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="com.chernowii.theatertime.THEATER_OFF"
+            android:layout_below="@+id/textView11"
+            android:id="@+id/textView12"
+            android:layout_alignParentStart="true"
+            android:textColor="#ffffff"
+            />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="COPY ON INTENT"
+            android:id="@+id/copyon"
+            android:layout_below="@+id/textView12"
+            android:layout_alignParentStart="true"
+            android:onClick="copyIntentOn" />
 
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="COPY OFF INTENT"
+            android:id="@+id/copyoff"
+            android:layout_below="@+id/textView12"
+            android:onClick="copyIntentOff"
+            android:layout_toEndOf="@+id/copyon" />
+    </RelativeLayout>
+    </ScrollView>
 </RelativeLayout>
