--- a/mobile/src/main/res/menu/menu_phone_config.xml
+++ b/mobile/src/main/res/menu/menu_phone_config.xml
@@ -7,4 +7,9 @@
         android:orderInCategory="100"
         android:title="@string/action_about"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/action_root"
+        android:orderInCategory="100"
+        android:title="@string/action_root"
+        app:showAsAction="never" />
 </menu>
