--- a/mobile/src/main/res/layout/content_phone_config.xml
+++ b/mobile/src/main/res/layout/content_phone_config.xml
@@ -174,7 +174,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="You can use these Intent URIs to turn Theater Mode ON or OFF.\nSet the Intent URIs to Broadcast Receiver! Works in Tasker/Llama. Use the buttons below to copy the URIs to Clipboard!:"
+            android:text="You can use these Intent URIs to turn Theater Mode ON or OFF.\nSet the Intent URIs to Broadcast Receiver! Works in Llama. Use the buttons below to copy the URIs to Clipboard!:\nNOTE: There is a Tasker plugin available!"
             android:layout_below="@+id/textView9"
             android:id="@+id/textView10"
             android:layout_alignParentStart="true"
@@ -252,7 +252,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Turn On Theater Time when the watch is charging, turn Off Theater Time when the watch is not carging anymore."
+            android:text="Turn On Theater Time when the watch is charging, turn Off Theater Time when the watch is not charging anymore."
             android:id="@+id/textView15"
             android:layout_below="@+id/textView14"
             android:layout_alignParentStart="true"
